@@ -53,6 +53,11 @@ B<env>) or the value of a certain environment variable.
 New default strategy B<perl> - send everything after 'p!' unparsed to the
 perl interpreter (might be used later on for a special rc file compiler)
 
+=item *
+
+New optional strategy B<darwin_apps> - tries to locate Darwin/Mac OS X
+Appbundle programs and execute them.
+
 =back
 
 =head2 Fixes
